# face-detection-in-color-images

./: .gitignore  backup.py  final.ipynb  main.py  pyproject.toml  readme.md  requirements.txt  result.txt  test.ipynb  test.py  ycrcb_spectrum_selector.py
face_detection/: __init__.py  __main__.py  color_space_transformation.py  eye_mouth_detection.py  light_compensation.py  skin_color_detection.py  utils.py
face_detection/detect/: eye_mouth.py  skin.py
face_detection/process/: color_space.py
face_detection/segment/: skin.py  skin_color.py
visualization/: color_space_transformation.py  eye_mouth_detection.py  final.py  find_color_model.py  light_compensation.py  show_skin_color_cluster.py  skin_color_detection.py
visualization/util/: take_photo.py  ycrcb_spectrum_selector.py
